清理：删除不必要的 .DS_Store 文件并更新 .gitignore 文件以排除系统生成的文件
- 删除多个目录中的 .DS_Store 文件
- 更新 .gitignore 文件以包含对 .DS_Store 和其他临时文件的排除规则

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,34 @@ tests
 bin
 build_release.sh
 .vscode
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Dependencies
+/vendor/
+
+# WordPress
+wp-config.php
+wp-content/uploads/
+wp-content/upgrade/
+
+# Logs
+*.log
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
